# ticket-service

./: Cargo.toml  Dockerfile  README.md  build.rs  compose.yml
.github/workflows/: rust.yml
src/: config.rs  datautils.rs  dependencies.rs  errors.rs  main.rs  parse.rs  proto.rs  rabbitmq.rs
src/tickets/: data.rs  map.rs  mod.rs
