[package]
name = "ticket-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
mongodb = "2.8.0"
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"
tonic-reflection = "0.10.2"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.10.2"
